--- a/beamerinnerthemefhooe.sty
+++ b/beamerinnerthemefhooe.sty
@@ -23,7 +23,7 @@
 \setbeamertemplate{title page}
 {
 	\begin{beamercolorbox}{title}
-		\usebeamerfont{title}\inserttitle -- \insertsubtitle
+		\usebeamerfont{title}\inserttitle{} -- \insertsubtitle
 	\end{beamercolorbox}
 	\begin{beamercolorbox}{date}
 		\usebeamerfont{date}\insertdate
