--- a/beamerouterthemefhooe.sty
+++ b/beamerouterthemefhooe.sty
@@ -219,22 +219,22 @@
 	\end{flushleft}
 }
 
-%\AtBeginSection{
-%	% Section overview
-%	\frameTwoColumns{\inserttitle}{Inhaltsverzeichnis}{c}
-%	{
-%		\tableofcontents[sectionstyle=show/shaded,subsectionstyle=hide,subsubsectionstyle=hide]
-%	}{
-%		\contentThemeIcon{outline.png}
-%	}
-%	% Subsection overview
-%	\frameTwoColumns{\inserttitle}{Inhaltsverzeichnis}{c}
-%	{
-%		\tableofcontents[sectionstyle=show/shaded,subsectionstyle=show/show/hide,subsubsectionstyle=hide]
-%	}{
-%		\contentThemeIcon{outline.png}
-%	}
-%}
+\AtBeginSection{
+	% Section overview
+	\frameTwoColumns{\inserttitle}{Inhaltsverzeichnis}{c}
+	{
+		\tableofcontents[sectionstyle=show/shaded,subsectionstyle=hide,subsubsectionstyle=hide]
+	}{
+		\contentThemeIcon{outline.png}
+	}
+	% Subsection overview
+	\frameTwoColumns{\inserttitle}{Inhaltsverzeichnis}{c}
+	{
+		\tableofcontents[sectionstyle=show/shaded,subsectionstyle=show/show/hide,subsubsectionstyle=hide]
+	}{
+		\contentThemeIcon{outline.png}
+	}
+}
 
 \AtBeginSubsection{
 	% Subsection overview
