start upading theme

--- a/examples/0_basic/slides.tex
+++ b/examples/0_basic/slides.tex
@@ -3,10 +3,16 @@
 \newcommand{\basepath}{../../sources}
 \usepackage{\basepath/beamerthemefhooe}
 
+\author{Georg}
+\title{Test}
+\subtitle{Test}
+
 \begin{document}
 
 \begin{frame}
-Hello, Beamer!
+    \frametitle{Test}
+    \framesubtitle{Test}
+    Hello, Beamer!
 \end{frame}
 
 \end{document}
