--- a/examples/1_toc/slides.tex
+++ b/examples/1_toc/slides.tex
@@ -17,7 +17,7 @@
 
 \title{Titel}
 \subtitle{Untertitel}
-\author{%
+\author[Dr.~Georg Hackenberg]{%
 	Dr.\ rer.\ nat.\ Georg Hackenberg\\
 	Professur für Informatik und Industriesysteme\\
 	\href{mailto:georg.hackenberg@fh-wels.at}{georg.hackenberg@fh-wels.at}
@@ -36,60 +36,80 @@
 \end{frame}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \section{Erster Abschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \subsection{Erster Unterabschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \subsection{Zweiter Unterabschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \section{Zweiter Abschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \subsection{Erster Unterabschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \subsection{Zweiter Unterabschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \section{Dritter Abschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \subsection{Erster Unterabschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
 \subsection{Zweiter Unterabschnitt}
 
 \begin{frame}
+\frametitle{Test}
+\framesubtitle{Test}
 Hello, Beamer!
 \end{frame}
 
