--- a/sources/beamercolorthemefhooe.sty
+++ b/sources/beamercolorthemefhooe.sty
@@ -1,6 +1,6 @@
 \mode<presentation>
 
-\definecolor{rot}{HTML}{C11919}
+\definecolor{rot}{HTML}{004B96}
 
 \setbeamercolor*{title}{fg=black}
 \setbeamercolor*{author}{fg=black}
@@ -12,6 +12,6 @@
 \setbeamercolor*{subsection in toc}{fg=black}
 \setbeamercolor*{subsubsection in toc}{fg=black}
 
-\hypersetup{colorlinks,linkcolor=,urlcolor=blue}
+\hypersetup{colorlinks,linkcolor=,urlcolor=gray}
 
 \mode<all>
