--- a/sources/beamerinnerthemefhooe.sty
+++ b/sources/beamerinnerthemefhooe.sty
@@ -8,34 +8,36 @@
 \setbeamertemplate{background}
 {
 	\begin{tikzpicture}
-		\useasboundingbox (0mm,0mm) rectangle(\paperwidth,\paperheight);
-%		\draw [step=0.25\unit,black!5,thin] (0mm,0mm) grid (\paperwidth,\paperheight);
-%		\draw [step=\unit,black!10,thin] (0mm,0mm) grid (\paperwidth,\paperheight);
-		\coordinate (point) at (0.75\unit,1.25\unit);
-		\node (logo) [at=(current page.south east),anchor=south east,xshift=-0.5\unit,yshift=0.5\unit,inner sep=0.25\unit]
+		\useasboundingbox (0mm,0mm) rectangle (\paperwidth,\paperheight);
+		%\draw [step=0.25\unit,black!5,thin] (0mm,0mm) grid (\paperwidth,\paperheight);
+		%\draw [step=\unit,black!10,thin] (0mm,0mm) grid (\paperwidth,\paperheight);
+		\draw [draw=rot,fill=rot] (15\unit,8\unit) rectangle (16\unit,9\unit);
+		\node (logo) at (15.5\unit,8.5\unit)
 		{
-			\includegraphics[height=0.75\unit]{\basepath/logos/fhooe.jpg}
+			\includegraphics[width=0.75\unit]{\basepath/logos/fhooe.png}
 		};
-		\draw [-,rot,thick] (point) to (point-|logo.west);
 	\end{tikzpicture}
 }
 
 \setbeamertemplate{title page}
 {
-	\begin{beamercolorbox}{title}
-		\usebeamerfont{title}\inserttitle{} -- \insertsubtitle
-	\end{beamercolorbox}
-	\begin{beamercolorbox}{date}
-		\usebeamerfont{date}\insertdate
-	\end{beamercolorbox}
-	\vskip0.5\unit
-	\begin{beamercolorbox}{author}
-		\usebeamerfont{author}\insertauthor
-	\end{beamercolorbox}
-	\vskip0.5\unit
-	\begin{beamercolorbox}{institute}
-		\usebeamerfont{institute}\insertinstitute
-	\end{beamercolorbox}
+	\vspace{1\unit}
+	\begin{minipage}[c][7\unit][c]{\textwidth}
+		\begin{beamercolorbox}{title}
+			\usebeamerfont{title}\inserttitle{} -- \insertsubtitle
+		\end{beamercolorbox}
+		\begin{beamercolorbox}{date}
+			\usebeamerfont{date}\insertdate
+		\end{beamercolorbox}
+		\vskip0.25\unit
+		\begin{beamercolorbox}{author}
+			\usebeamerfont{author}\insertauthor
+		\end{beamercolorbox}
+		\vskip0.25\unit
+		\begin{beamercolorbox}{institute}
+			\usebeamerfont{institute}\insertinstitute
+		\end{beamercolorbox}
+	\end{minipage}
 }
 
 \setbeamertemplate{itemize items}{--}
