continue working on theme

--- a/examples/2_frame/slides.tex
+++ b/examples/2_frame/slides.tex
@@ -5,7 +5,7 @@
 
 \title{Titel}
 \subtitle{Untertitel}
-\author[Dr.~Georg Hackenberg]{%
+\author[Dr.~Georg Hackenberg, Professor für Informatik und Industriesysteme (\href{mailto:georg.hackenberg@fh-wels.at}{georg.hackenberg@fh-wels.at})]{%
 	Dr.~Georg Hackenberg BSc MSc\\
 	Professor für Informatik und Industriesysteme\\
 	\href{mailto:georg.hackenberg@fh-wels.at}{georg.hackenberg@fh-wels.at}
