--- a/sources/beamerinnerthemefhooe.sty
+++ b/sources/beamerinnerthemefhooe.sty
@@ -11,6 +11,8 @@
 		\useasboundingbox (0mm,0mm) rectangle (\paperwidth,\paperheight);
 		%\draw [step=0.25\unit,black!5,thin] (0mm,0mm) grid (\paperwidth,\paperheight);
 		%\draw [step=\unit,black!10,thin] (0mm,0mm) grid (\paperwidth,\paperheight);
+		\draw [draw=black!20,fill=black!10] (-1\unit,0\unit) rectangle (17\unit,1\unit);
+		\draw [draw=black!20,fill=black!10] (-1\unit,8\unit) rectangle (17\unit,10\unit);
 		\draw [draw=rot,fill=rot] (15\unit,8\unit) rectangle (16\unit,9\unit);
 		\node (logo) at (15.5\unit,8.5\unit)
 		{
