--- a/sources/beamerthemefhooe.sty
+++ b/sources/beamerthemefhooe.sty
@@ -23,4 +23,8 @@
 \usepackage{\basepath/beamerouterthemefhooe}
 \usepackage{\basepath/beamercolorthemefhooe}
 
+\offinterlineskip
+
+\setlength{\parskip}{0mm}
+
 \mode<all>
