--- a/examples/2_frame/slides.tex
+++ b/examples/2_frame/slides.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169,9pt]{beamer}
+\documentclass[aspectratio=169,8pt]{beamer}
 
 \newcommand{\basepath}{../../sources}
 \usepackage{\basepath/beamerthemefhooe}
@@ -36,25 +36,31 @@
 
 \frameOneColumn{}{}{c}
 {
+    \centering
     Test
 }
 
 \frameTwoColumns{}{}{c}
 {
+    \centering
     Linke Spalte
 }
 {
+    \centering
     Rechte Spalte
 }
 
 \frameThreeColumns{}{}{c}
 {
+    \centering
     Linke Spalte
 }
 {
+    \centering
     Mittlere Spalte
 }
 {
+    \centering
     Rechte Spalte
 }
 
