--- a/sources/beamerouterthemefhooe.sty
+++ b/sources/beamerouterthemefhooe.sty
@@ -41,10 +41,10 @@
 {
 	\begin{minipage}[c][1\unit][c]{14.5\unit}
 		\usebeamercolor[fg]{frame title}\usebeamerfont{frame title}\insertframetitle
-
+		
 		\usebeamercolor[fg]{frame sub title}\usebeamerfont{frame sub title}\insertframesubtitle
 	\end{minipage}
-	\vspace{-0.085\unit}
+	\vspace{-0.075\unit}
 }
 
 \setbeamertemplate{headline}
@@ -58,11 +58,11 @@
 		\useasboundingbox (0mm,0mm) rectangle(\paperwidth,1\unit);
 		\node[anchor=west,inner sep=0mm] at (0.5\unit,0.5\unit)
 		{
-			\tiny \insertshortauthor
+			\footnotesize \insertshortauthor
 		};
 		\node[anchor=east,inner sep=0mm] at (\paperwidth-0.5\unit,0.5\unit)
 		{
-			\tiny Seite \insertframenumber\ von \inserttotalframenumber
+			\footnotesize Seite \insertframenumber\ von \inserttotalframenumber
 		};
 	\end{tikzpicture}
 }
@@ -88,12 +88,13 @@
 		\frametitle{\ifthenelse{\equal{#1}{}}{\defaultframetitle}{#1}}
 		\framesubtitle{\ifthenelse{\equal{#2}{}}{\defaultframesubtitle}{#2}}
 		\begin{columns}
-			\begin{column}{7.5\unit}
+			\begin{column}{7.25\unit}
 				\begin{minipage}[c][7\unit][#3]{\textwidth}
 					#4
 				\end{minipage}
 			\end{column}
-			\begin{column}{7.5\unit}
+			\hspace{0.5\unit}
+			\begin{column}{7.25\unit}
 				\begin{minipage}[c][7\unit][#3]{\textwidth}
 					#5
 				\end{minipage}
@@ -108,17 +109,19 @@
 		\frametitle{\ifthenelse{\equal{#1}{}}{\defaultframetitle}{#1}}
 		\framesubtitle{\ifthenelse{\equal{#2}{}}{\defaultframesubtitle}{#2}}
 		\begin{columns}
-			\begin{column}{5\unit}
+			\begin{column}{4.66\unit}
 				\begin{minipage}[c][7\unit][#3]{\textwidth}
 					#4
 				\end{minipage}
 			\end{column}
-			\begin{column}{5\unit}
+			\hspace{0.5\unit}
+			\begin{column}{4.66\unit}
 				\begin{minipage}[c][7\unit][#3]{\textwidth}
 					#5
 				\end{minipage}
 			\end{column}
-			\begin{column}{5\unit}
+			\hspace{0.5\unit}
+			\begin{column}{4.66\unit}
 				\begin{minipage}[c][7\unit][#3]{\textwidth}
 					#6
 				\end{minipage}
