--- a/examples/2_frame/slides.tex
+++ b/examples/2_frame/slides.tex
@@ -3,22 +3,31 @@
 \newcommand{\basepath}{../../sources}
 \usepackage{\basepath/beamerthemefhooe}
 
+\newcommand{\sectiontocframetitle}{\inserttitle~--~\insertsubtitle}
+\newcommand{\sectiontocframesubtitle}{Inhaltsverzeichnis}
+
+\newcommand{\subsectiontocframetitle}{\inserttitle~--~\insertsubtitle}
+\newcommand{\subsectiontocframesubtitle}{Inhaltsverzeichnis}
+
+\AtBeginSection{\frameSectionTOC{shaded}}
+\AtBeginSubsection{\frameSubsectionTOC{shaded}}
+
+\newcommand{\defaultframetitle}{\insertshorttitle~--~\insertshortsubtitle~--~\secname~--~\subsecname}
+\newcommand{\defaultframesubtitle}{Untertitel fehlt!}
+
 \title{Titel}
 \subtitle{Untertitel}
-\author[Dr.~Georg Hackenberg, Professor für Informatik und Industriesysteme (\href{mailto:georg.hackenberg@fh-wels.at}{georg.hackenberg@fh-wels.at})]{%
+\author[Dr.~Georg Hackenberg]{%
 	Dr.~Georg Hackenberg BSc MSc\\
 	Professor für Informatik und Industriesysteme\\
 	\href{mailto:georg.hackenberg@fh-wels.at}{georg.hackenberg@fh-wels.at}
 }
-\institute{%
+\institute[Fakultät für Technik und angewandte Naturwissenschaften, FH Oberösterreich]{%
 	Fachhochschule Oberösterreich\\
 	Fakultät für Technik und Angewandte Naturwissenschaften\\
 	Stelzhamerstraße 28, 4600 Wels, Österreich%
 }
 \date{\today}
-
-\newcommand{\defaultframetitle}{\inserttitle~--~\insertsubtitle}
-\newcommand{\defaultframesubtitle}{\secname~--~\subsecname~--~\subsubsecname}
 
 \addtobeamertemplate{frametitle}{}{}
 
@@ -30,15 +39,33 @@
 
 \section{Abschnitt}
 
-\subsection{Unterabschnitt}
-
-\subsubsection{Unterunterabschnitt}
-
-\frameOneColumn{}{}{c}
+\frameOneColumn{}{Test}{c}
 {
     \centering
     Test
 }
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\subsection{Unterabschnitt}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\subsection{Unterabschnitt}
 
 \frameTwoColumns{}{}{c}
 {
@@ -49,6 +76,14 @@
     \centering
     Rechte Spalte
 }
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\subsection{Unterabschnitt}
 
 \frameThreeColumns{}{}{c}
 {
@@ -62,6 +97,68 @@
 {
     \centering
     Rechte Spalte
+}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\section{Abschnitt}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\subsection{Unterabschnitt}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\section{Abschnitt}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\subsection{Unterabschnitt}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
+}
+
+\frameOneColumn{}{Test}{c}
+{
+    \centering
+    Test
 }
 
 \end{document}
