--- a/examples/0_basic/slides.tex
+++ b/examples/0_basic/slides.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169]{beamer}
+\documentclass[aspectratio=169,8pt]{beamer}
 
 \newcommand{\basepath}{../../sources}
 \usepackage{\basepath/beamerthemefhooe}
