--- a/examples/2_frame/slides.tex
+++ b/examples/2_frame/slides.tex
@@ -3,33 +3,19 @@
 \newcommand{\basepath}{../../sources}
 \usepackage{\basepath/beamerthemefhooe}
 
-\newcommand{\sectiontocframetitle}{\inserttitle~--~\insertsubtitle}
-\newcommand{\sectiontocframesubtitle}{Inhaltsverzeichnis}
-
-\newcommand{\subsectiontocframetitle}{\inserttitle~--~\insertsubtitle}
-\newcommand{\subsectiontocframesubtitle}{Inhaltsverzeichnis}
-
-\AtBeginSection{\frameSectionTOC{shaded}}
-\AtBeginSubsection{\frameSubsectionTOC{shaded}}
-
-\newcommand{\defaultframetitle}{\insertshorttitle~--~\insertshortsubtitle~--~\secname~--~\subsecname}
-\newcommand{\defaultframesubtitle}{Untertitel fehlt!}
-
-\title{Titel}
-\subtitle{Untertitel}
-\author[Dr.~Georg Hackenberg]{%
+\title{Computer Simulation}
+\subtitle{Kontinuierliche Dynamische Modelle}
+\author[Dr.~Georg Hackenberg, Professor für Informatik und Industriesysteme (\href{mailto:georg.hackenberg@fh-wels.at}{georg.hackenberg@fh-wels.at})]{%
 	Dr.~Georg Hackenberg BSc MSc\\
 	Professor für Informatik und Industriesysteme\\
 	\href{mailto:georg.hackenberg@fh-wels.at}{georg.hackenberg@fh-wels.at}
 }
-\institute[Fakultät für Technik und angewandte Naturwissenschaften, FH Oberösterreich]{%
+\institute[Fachbereich Informationstechnologie, Fakultät für Technik und angewandte Naturwissenschaften, FH Oberösterreich]{%
 	Fachhochschule Oberösterreich\\
 	Fakultät für Technik und Angewandte Naturwissenschaften\\
 	Stelzhamerstraße 28, 4600 Wels, Österreich%
 }
 \date{\today}
-
-\addtobeamertemplate{frametitle}{}{}
 
 \begin{document}
 
