--- a/sources/beamercolorthemefhooe.sty
+++ b/sources/beamercolorthemefhooe.sty
@@ -3,8 +3,9 @@
 \definecolor{rot}{HTML}{004B96}
 
 \setbeamercolor*{title}{fg=black}
+\setbeamercolor*{subtitle}{fg=rot}
 \setbeamercolor*{author}{fg=black}
-\setbeamercolor*{date}{fg=rot}
+\setbeamercolor*{date}{fg=gray}
 \setbeamercolor*{frame title}{fg=black}
 \setbeamercolor*{frame sub title}{fg=rot}
 \setbeamercolor*{item}{fg=rot}
