turn custom layout command into environment

--- a/examples/2_frame/slides.tex
+++ b/examples/2_frame/slides.tex
@@ -23,128 +23,22 @@
     \titlepage
 \end{frame}
 
-\section{Abschnitt}
+\section{Einführung}
 
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
+\subsection{Grundlagen}
 
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\subsection{Unterabschnitt}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\subsection{Unterabschnitt}
-
-\frameTwoColumns{}{}{c}
-{
-    \centering
-    Linke Spalte
-}
-{
-    \centering
-    Rechte Spalte
-}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\subsection{Unterabschnitt}
-
-\frameThreeColumns{}{}{c}
-{
-    \centering
-    Linke Spalte
-}
-{
-    \centering
-    Mittlere Spalte
-}
-{
-    \centering
-    Rechte Spalte
-}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\section{Abschnitt}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\subsection{Unterabschnitt}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\section{Abschnitt}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\subsection{Unterabschnitt}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
-
-\frameOneColumn{}{Test}{c}
-{
-    \centering
-    Test
-}
+\begin{cframe}{}{Test}{3}{c}
+    \begin{columns}
+        \begin{ccolumn}
+            Inhalt Spalte 1
+        \end{ccolumn}
+        \begin{ccolumn}
+            Inhalt Spalte 1
+        \end{ccolumn}
+        \begin{ccolumn}
+            Inhalt Spalte 1
+        \end{ccolumn}
+    \end{columns}
+\end{cframe}
 
 \end{document}
